# mjtools

./: COPYING  Makefile  README.md  mj_deck.c  mj_deck.h  mj_effective_tile.c  mj_effective_tile.h  mj_player.c  mj_player.h  mj_player_cui.c  mj_player_furoman.c  mj_player_interface.h  mj_player_shanten.c  mj_player_shanten.h  mj_player_shantenman.c  mj_player_shantenman.h  mj_player_tsumogiri.c  mj_player_tsumogiri.h  mj_player_wrapper.c  mj_player_wrapper.h  mj_random.h  mj_random_xoshiro256pp.c  mj_random_xoshiro256pp.h  mj_river.c  mj_river.h  mj_score.c  mj_score.h  mj_shanten.c  mj_shanten.h  mj_shanten_use_table.c  mj_syanten.c  mj_syanten.h  mj_tile.h  mj_types.h  mj_utility.h
.github/workflows/: c-cpp.yml
core/: CMakeLists.txt
core/include/: mj_score.h
core/make_shanten_table/: CMakeLists.txt  make_shanten_table.c
core/src/: CMakeLists.txt  mj_score.c  mj_shanten_use_table.c  mj_shanten_use_table.h
make_shanten_table/: Makefile  make_shanten_table.c
player/: CMakeLists.txt
player/include/: mj_player_cui.h  mj_player_furoman.h
player/src/: CMakeLists.txt  mj_player_furoman.c
samples/sample_simulator/: CMakeLists.txt  sample_simulator.c
simulator/: CMakeLists.txt
simulator/include/: mj_random.h
simulator/src/: CMakeLists.txt  mj_deck.c  mj_player_wrapper.c  mj_player_wrapper.h  mj_random_xoshiro256pp.c  mj_river.c  mj_river.h
test/: CMakeLists.txt  Makefile  test_main.c  test_mj_deck.c  test_mj_effective_tile.c  test_mj_player.c  test_mj_player_cui.c  test_mj_player_furoman.c  test_mj_player_shanten.c  test_mj_player_shantenman.c  test_mj_player_tsumogiri.c  test_mj_player_wrapper.c  test_mj_random_xorshiro256pp.c  test_mj_river.c  test_mj_score.c  test_mj_shanten.c  test_mj_syanten.c  test_mj_tile.c
test/libtest/: CMakeLists.txt
test/test_src/: CMakeLists.txt  test_mj_deck.c  test_mj_player_cui.c  test_mj_player_furoman.c  test_mj_player_shantenman.c  test_mj_player_tsumogiri.c  test_mj_player_wrapper.c  test_mj_random_xorshiro256pp.c  test_mj_river.c  test_mj_score.c  test_mj_shanten.c  test_mj_tile.c
test/test_src/problems/: README.md
